syntax = "proto3";

option go_package = "pcl-sdk-go-urchin/storage/proto/module";

package module;

message ObjDeployment {
  // @inject_tag: json:"id" xorm:"pk autoincr"
  int32 id = 1[json_name="id"];
  // @inject_tag: json:"obj_uuid" xorm:"VARCHAR(64) NOT NULL DEFAULT '' comment('数据对象唯一标识')"
  string obj_uuid = 2[json_name="obj_uuid"];
  // @inject_tag: json:"node_id" xorm:"INT notnull default(0) comment('分中心id')"
  int32 node_id = 3[json_name="node_id"];
  // @inject_tag: json:"location" xorm:"TEXT comment('存储位置')"
  string location = 4[json_name="location"];
  // @inject_tag: json:"type" xorm:"INT notnull default(0) comment('部署类型，1：持久化；2：缓存')"
  int32 type = 5[json_name="type"];
  // @inject_tag: json:"status" xorm:"INT notnull default(0) comment('数据对象部署状态，0：初始状态；1：正常状态；2：操作中；3：已删除')"
  int32 status = 6[json_name="status"];
  // @inject_tag: json:"version" xorm:"version BIGINT notnull default(0) comment('版本控制')"
  int32 version = 7[json_name="version"];
  // @inject_tag: json:"create_time" xorm:"TIMESTAMP notnull created comment('记录创建时间')"
  string create_time = 8[json_name="create_time"];
  // @inject_tag: json:"update_time" xorm:"TIMESTAMP notnull updated comment('记录变更时间')"
  string update_time = 9[json_name="update_time"];
  // @inject_tag: json:"delete_time" xorm:"TIMESTAMP NOT NULL DEFAULT '1970-01-01 08:00:01' comment('记录删除时间')"
  string delete_time = 10[json_name="delete_time"];
}
