syntax = "proto3";

option go_package = "pcl-sdk-go-urchin/storage/proto/module";

package module;

message Task {
  // @inject_tag: json:"id" xorm:"pk autoincr"
  int32 id = 1[json_name="id"];
  // @inject_tag: json:"type" xorm:"INT notnull default(0) comment('任务类型，1：上传；2：下载；3：迁移；4：删除')"
  int32 type = 2[json_name="type"];
  // @inject_tag: json:"name" xorm:"VARCHAR(64) NOT NULL DEFAULT '' comment('任务名称')"
  string name = 3[json_name="name"];
  // @inject_tag: json:"params" xorm:"TEXT comment('任务参数')"
  string params = 4[json_name="params"];
  // @inject_tag: json:"status" xorm:"INT notnull default(0) comment('任务状态，0：初始状态；1：执行中；2：执行完成；3：取消')"
  int32 status = 5[json_name="status"];
  // @inject_tag: json:"task_exec_id" xorm:"INT notnull default(0) comment('任务执行记录id')"
  int32 task_exec_id = 6[json_name="task_exec_id"];
  // @inject_tag: json:"result" xorm:"INT notnull default(0) comment('任务执行结果，0：初始状态；1：成功；2：失败')"
  int32 result = 7[json_name="result"];
  // @inject_tag: json:"return" xorm:"TEXT comment('任务返回信息')"
  string return = 8[json_name="return"];
  // @inject_tag: json:"obj_uuid" xorm:"VARCHAR(64) NOT NULL DEFAULT '' comment('数据对象唯一标识')"
  string obj_uuid = 9[json_name="obj_uuid"];
  // @inject_tag: json:"user_id" xorm:"VARCHAR(64) NOT NULL DEFAULT '' comment('任务关联用户id')"
  string user_id = 10[json_name="user_id"];
  // @inject_tag: json:"start_time" xorm:"TIMESTAMP NOT NULL DEFAULT '1970-01-01 08:00:01' comment('任务开始时间')"
  string start_time = 11[json_name="start_time"];
  // @inject_tag: json:"finish_time" xorm:"TIMESTAMP NOT NULL DEFAULT '1970-01-01 08:00:01' comment('任务结束时间')"
  string finish_time = 12[json_name="finish_time"];
  // @inject_tag: json:"create_time" xorm:"TIMESTAMP notnull created comment('记录创建时间')"
  string create_time = 13[json_name="create_time"];
  // @inject_tag: json:"update_time" xorm:"TIMESTAMP notnull updated comment('记录变更时间')"
  string update_time = 14[json_name="update_time"];
}
